<resources>
    <string name="app_name">Inventory App</string>

    <string name="empty_view_text">Click Add Button Below for Adding Products</string>

    <string name="product_name">Product Name</string>

    <string name="product_price">Price Per Unit</string>

    <string name="product_quantity">Quantity</string>

    <string name="product_supplier">Supplier Name</string>

    <string name="product_supplier_contact">Supplier Contact</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Entries</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="product_sold">Product Sold</string>

    <string name="product_sale_fail">Product Sale Fail</string>

    <string name="out_of_stock">Product Out of Stock</string>

    <string name="product_added">Product Added</string>

    <string name="product_addition_fail">Product Addition Fail</string>

    <string name="product_name_require">Product Name Required</string>

    <string name="product_price_require">Product Price Required</string>

    <string name="product_quantity_require">Product Quantity Required</string>

    <string name="product_supplier_require">Product Supplier Name Required</string>

    <string name="product_supplier_contact_require">Product Supplier Contact Required</string>

</resources>
